# indiiOS-Clean

./: .cursorignore  .dockerignore  .editorconfig  .env.backup  .env.example  .env.production  .eslintignore  .firebaserc  .gitignore  .gitleaks.toml  .gitleaksignore  .graphifyignore  .lintstagedrc.json  .markdownlint.json  .markdownlintignore  .npmrc  .rag-sync-state.json  .release-please-manifest.json  ADVANCED_IMPROVEMENTS_ROADMAP.md  AGENT_BRIDGE.md  AGENT_COLLABORATION_SUMMARY.md  ARCHITECTURE_BLUEPRINT.md  ASSET_LIBRARY_DEBUG_PLAN.md  ASSET_LIBRARY_IMPROVEMENTS.md  AUDIT_2026.md  AUDIT_RECOVERY_PLAN.md  AUDIT_REPORT.md  BOLT_INSTRUCTIONS.md  BROKEN.md  CF_V2_MIGRATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY_INSTRUCTIONS.md  DESIGN.md  DNA_BLUEPRINT.md  DROID.md  E2E_TESTS_REPORT.md  (+204 more)
optimization/autoagent/: .gitignore  JULES_PROMPT.md  README.md  agent.py  diagnostic_routing.py  eval.py  optimize.py  program.md  pyproject.toml  results.tsv
optimization/autoagent/scripts/: sync_winning_prompt.py
optimization/autoagent/tasks/: consistency-01-conductor.json  consistency-02-video.json  consistency-03-finance.json  consistency-04-creative-director.json  consistency-05-legal.json  coverage-01-conductor.json  coverage-02-music.json  coverage-03-distribution.json  coverage-04-publishing.json  coverage-05-road.json  routing-01-creative.json  routing-02-brand.json  routing-03-marketing.json  routing-04-video.json  routing-05-legal.json  routing-06-finance.json  routing-07-music.json  routing-08-distribution.json  (+8 more)
src/: main.tsx  (+3 more)
(+3102 files in other folders)
